obiba/opal#3529 Groups claim is configurable